--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -37,12 +37,12 @@
         android:id="@+id/btn_add_book"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
         android:layout_margin="16dp"
+        app:backgroundTint="#C7B2ED"
         app:fabSize="normal"
         app:srcCompat="@android:drawable/ic_input_add"
-        app:backgroundTint="#6200EE"
-        android:tint="#FFFFFF"/>
+        app:tint="@color/white" />
 
 </RelativeLayout>
