--- a/app/src/main/res/layout/activity_add_sentence.xml
+++ b/app/src/main/res/layout/activity_add_sentence.xml
@@ -130,7 +130,7 @@
                 android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/etReview"
+                android:id="@+id/etComment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:minHeight="100dp"
