--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -33,5 +33,5 @@
         android:textColor="#AAAAAA"
         android:textSize="12sp" />
 
-    <Button android:id="@+id/btnChangePwSubmit" android:layout_width="match_parent" android:layout_height="55dp" android:layout_marginTop="40dp" android:text="변경 완료" android:backgroundTint="#333333" android:textColor="#FFFFFF"/>
+    <Button android:id="@+id/btnChangePwSubmit" android:layout_width="match_parent" android:layout_height="55dp" android:layout_marginTop="40dp" android:text="변경 완료" android:backgroundTint="#6378EF" android:textColor="#FFFFFF"/>
 </LinearLayout>
