--- a/app/src/main/res/layout/fragment_join.xml
+++ b/app/src/main/res/layout/fragment_join.xml
@@ -92,7 +92,7 @@
             android:layout_height="55dp"
             android:layout_marginTop="30dp"
             android:layout_marginBottom="20dp"
-            android:backgroundTint="#333333"
+            android:backgroundTint="#6378EF"
             android:textColor="#FFFFFF"
             android:text="회원가입" />
 
