--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -70,7 +70,7 @@
                     android:text="2026년 1월"
                     android:textSize="18sp"
                     android:textStyle="bold"
-                    android:textColor="#000000" />
+                    android:textColor="#6378EF" />
             </LinearLayout>
 
             <androidx.cardview.widget.CardView
