전체적인 코드 90퍼센트 완료

--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -34,22 +34,19 @@
 
                 <LinearLayout
                     android:layout_width="wrap_content"
+                    android:layout_height="48dp"
+                    android:orientation="vertical"
+                    android:gravity="center_vertical">
+
+                    <TextView
+                    android:id="@+id/tvUserName"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
-                    <TextView
-                        android:id="@+id/tvUserName"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="책먹는 여우 님"
-                        android:textColor="#000000"
-                        android:textSize="20sp"
-                        android:textStyle="bold" />
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="내 정보 >"
-                        android:textSize="12sp"
-                        android:textColor="#888888" />
+                    android:text="책먹는 여우 "
+                    android:textColor="#000000"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
                 </LinearLayout>
 
                 <Button
@@ -57,9 +54,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
                     android:text="로그아웃"
                     style="?android:attr/borderlessButtonStyle"
                     android:textColor="#666666" />
+
             </RelativeLayout>
 
             <androidx.cardview.widget.CardView
@@ -93,7 +92,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         app:cv_dayViewResource="@layout/calendar_day_layout" />
+
                 </LinearLayout>
+
             </androidx.cardview.widget.CardView>
 
             <LinearLayout
@@ -147,6 +148,9 @@
                     android:background="#EEEEEE"/>
 
             </LinearLayout>
+
         </LinearLayout>
+
     </ScrollView>
+
 </LinearLayout>
