전체적인 코드 90퍼센트 완료

--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -15,16 +15,53 @@
         android:textSize="18sp"
         android:textStyle="bold" />
 
-    <View android:layout_width="match_parent" android:layout_height="1dp" android:background="#EEEEEE" android:layout_marginBottom="30dp"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#EEEEEE"
+        android:layout_marginBottom="30dp"/>
 
-    <EditText android:id="@+id/etCurrentPw" android:layout_width="match_parent" android:layout_height="50dp" android:hint="기존 비밀번호" android:inputType="textPassword" android:background="@android:color/transparent" />
-    <View android:layout_width="match_parent" android:layout_height="1dp" android:background="#EEEEEE" android:layout_marginBottom="20dp"/>
+    <EditText
+        android:id="@+id/etCurrentPw"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:hint="기존 비밀번호"
+        android:inputType="textPassword"
+        android:background="@android:color/transparent" />
 
-    <EditText android:id="@+id/etNewPw" android:layout_width="match_parent" android:layout_height="50dp" android:hint="새 비밀번호" android:inputType="textPassword" android:background="@android:color/transparent" />
-    <View android:layout_width="match_parent" android:layout_height="1dp" android:background="#EEEEEE" android:layout_marginBottom="20dp"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#EEEEEE"
+        android:layout_marginBottom="20dp"/>
 
-    <EditText android:id="@+id/etNewPwConfirm" android:layout_width="match_parent" android:layout_height="50dp" android:hint="새 비밀번호 재입력" android:inputType="textPassword" android:background="@android:color/transparent" />
-    <View android:layout_width="match_parent" android:layout_height="1dp" android:background="#EEEEEE" android:layout_marginBottom="10dp"/>
+    <EditText
+        android:id="@+id/etNewPw"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:hint="새 비밀번호"
+        android:inputType="textPassword"
+        android:background="@android:color/transparent" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#EEEEEE"
+        android:layout_marginBottom="20dp"/>
+
+    <EditText
+        android:id="@+id/etNewPwConfirm"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:hint="새 비밀번호 재입력"
+        android:inputType="textPassword"
+        android:background="@android:color/transparent" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#EEEEEE"
+        android:layout_marginBottom="10dp"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -33,5 +70,13 @@
         android:textColor="#AAAAAA"
         android:textSize="12sp" />
 
-    <Button android:id="@+id/btnChangePwSubmit" android:layout_width="match_parent" android:layout_height="55dp" android:layout_marginTop="40dp" android:text="변경 완료" android:backgroundTint="#6378EF" android:textColor="#FFFFFF"/>
+    <Button
+        android:id="@+id/btnChangePwSubmit"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:layout_marginTop="40dp"
+        android:text="변경 완료"
+        android:backgroundTint="#6378EF"
+        android:textColor="#FFFFFF"/>
+
 </LinearLayout>
