--- a/app/src/main/res/layout/fragment_join.xml
+++ b/app/src/main/res/layout/fragment_join.xml
@@ -14,6 +14,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="60dp">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -21,6 +22,7 @@
                 android:text="회원가입"
                 android:textSize="18sp"
                 android:textStyle="bold" />
+
         </RelativeLayout>
 
         <TextView
@@ -29,6 +31,7 @@
             android:text="닉네임"
             android:textStyle="bold"
             android:layout_marginTop="20dp"/>
+
         <EditText
             android:id="@+id/etJoinNickname"
             android:layout_width="match_parent"
@@ -36,7 +39,11 @@
             android:hint="닉네임을 입력해 주세요."
             android:inputType="text"
             android:background="@android:color/transparent" />
-        <View android:layout_width="match_parent" android:layout_height="1dp" android:background="#EEEEEE" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#EEEEEE" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -44,13 +51,18 @@
             android:text="이메일"
             android:textStyle="bold"
             android:layout_marginTop="20dp"/>
+
         <EditText
             android:id="@+id/etJoinEmail"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:hint="이메일을 입력해 주세요."
             android:background="@android:color/transparent" />
-        <View android:layout_width="match_parent" android:layout_height="1dp" android:background="#EEEEEE" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#EEEEEE" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -58,6 +70,7 @@
             android:text="비밀번호"
             android:textStyle="bold"
             android:layout_marginTop="20dp"/>
+
         <EditText
             android:id="@+id/etJoinPw"
             android:layout_width="match_parent"
@@ -65,7 +78,11 @@
             android:hint="비밀번호를 입력해 주세요."
             android:inputType="textPassword"
             android:background="@android:color/transparent" />
-        <View android:layout_width="match_parent" android:layout_height="1dp" android:background="#EEEEEE" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#EEEEEE" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -74,17 +91,33 @@
             android:layout_marginTop="30dp"
             android:background="#F5F5F5"
             android:padding="12dp">
+
             <CheckBox
                 android:id="@+id/cbAll"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="모두 동의"
                 android:textStyle="bold" />
+
         </LinearLayout>
 
-        <CheckBox android:id="@+id/cbService" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="서비스 약관 동의 (필수)" />
-        <CheckBox android:id="@+id/cbPrivacy" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="개인정보 수집 및 이용 동의 (필수)" />
-        <CheckBox android:id="@+id/cbAge" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="만 14세 이상입니다. (필수)" />
+        <CheckBox
+            android:id="@+id/cbService"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="서비스 약관 동의 (필수)" />
+
+        <CheckBox
+            android:id="@+id/cbPrivacy"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="개인정보 수집 및 이용 동의 (필수)" />
+
+        <CheckBox
+            android:id="@+id/cbAge"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="만 14세 이상입니다. (필수)" />
 
         <Button
             android:id="@+id/btnJoinSubmit"
@@ -97,4 +130,5 @@
             android:text="회원가입" />
 
     </LinearLayout>
+
 </ScrollView>
