--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -9,6 +9,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="60dp">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -17,23 +18,96 @@
             android:textColor="#000000"
             android:textSize="18sp"
             android:textStyle="bold" />
+
     </RelativeLayout>
 
-    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="이메일" android:textStyle="bold" android:layout_marginTop="30dp"/>
-    <EditText android:id="@+id/etLoginEmail" android:layout_width="match_parent" android:layout_height="50dp" android:hint="이메일을 입력해 주세요." android:background="@android:color/transparent" />
-    <View android:layout_width="match_parent" android:layout_height="1dp" android:background="#EEEEEE" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="이메일"
+        android:textStyle="bold"
+        android:layout_marginTop="30dp"/>
 
-    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="비밀번호" android:textStyle="bold" android:layout_marginTop="20dp"/>
-    <EditText android:id="@+id/etLoginPw" android:layout_width="match_parent" android:layout_height="50dp" android:hint="비밀번호를 입력해 주세요." android:inputType="textPassword" android:background="@android:color/transparent" />
-    <View android:layout_width="match_parent" android:layout_height="1dp" android:background="#EEEEEE" />
+    <EditText
+        android:id="@+id/etLoginEmail"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:hint="이메일을 입력해 주세요."
+        android:background="@android:color/transparent" />
 
-    <Button android:id="@+id/btnLoginSubmit" android:layout_width="match_parent" android:layout_height="55dp" android:layout_marginTop="40dp" android:backgroundTint="#6378EF" android:text="로그인" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#EEEEEE" />
 
-    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center" android:layout_marginTop="20dp">
-        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="아이디 찾기" android:textSize="12sp" android:textColor="#888888"/>
-        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="  |  " android:textColor="#EEEEEE"/>
-        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="비밀번호 찾기" android:textSize="12sp" android:textColor="#888888"/>
-        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="  |  " android:textColor="#EEEEEE"/>
-        <TextView android:id="@+id/tvGoJoin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="회원가입" android:textSize="12sp" android:textColor="#888888"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="비밀번호"
+        android:textStyle="bold"
+        android:layout_marginTop="20dp"/>
+
+    <EditText
+        android:id="@+id/etLoginPw"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:hint="비밀번호를 입력해 주세요."
+        android:inputType="textPassword"
+        android:background="@android:color/transparent" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#EEEEEE" />
+
+    <Button
+        android:id="@+id/btnLoginSubmit"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:layout_marginTop="40dp"
+        android:backgroundTint="#6378EF"
+        android:text="로그인" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="아이디 찾기"
+            android:textSize="12sp"
+            android:textColor="#888888"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="  |  "
+            android:textColor="#EEEEEE"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="비밀번호 찾기"
+            android:textSize="12sp"
+            android:textColor="#888888"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="  |  "
+            android:textColor="#EEEEEE"/>
+
+        <TextView
+            android:id="@+id/tvGoJoin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="회원가입"
+            android:textSize="12sp"
+            android:textColor="#888888"/>
+
     </LinearLayout>
+
 </LinearLayout>
