--- a/app/src/main/res/layout/activity_add_book.xml
+++ b/app/src/main/res/layout/activity_add_book.xml
@@ -20,6 +20,7 @@
                 android:layout_height="wrap_content"
                 android:text="도서 추가"
                 android:layout_centerInParent="true"
+                android:textColor="#333333"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
@@ -71,6 +72,7 @@
                 android:layout_weight="1"
                 android:background="@android:drawable/editbox_background"
                 android:hint="도서를 검색해보세요."
+                android:textColor="#333333"
                 android:padding="12dp"
                 android:imeOptions="actionSearch"
                 android:inputType="text" />
@@ -97,6 +99,7 @@
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:text="도서 제목"
+                android:textColor="#333333"
                 android:textStyle="bold"/>
 
             <EditText
@@ -104,6 +107,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@null"
+                android:textColor="#333333"
                 android:hint="제목 입력" />
 
         </LinearLayout>
@@ -118,6 +122,7 @@
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:text="저자"
+                android:textColor="#333333"
                 android:textStyle="bold"/>
 
             <EditText
@@ -125,6 +130,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@null"
+                android:textColor="#333333"
                 android:hint="저자 입력" />
         </LinearLayout>
 
@@ -138,6 +144,7 @@
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:text="시작 일자"
+                android:textColor="#333333"
                 android:textStyle="bold"/>
 
             <EditText
@@ -145,7 +152,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@null"
-                android:hint="2026.01.15" />
+                android:hint="20XX.XX.XX" />
 
         </LinearLayout>
 
@@ -159,6 +166,7 @@
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:text="완료 일자"
+                android:textColor="#333333"
                 android:textStyle="bold"/>
 
             <EditText
@@ -166,7 +174,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@null"
-                android:hint="2026.01.18" />
+                android:textColor="#333333"
+                android:hint="20XX.XX.XX" />
 
         </LinearLayout>
 
@@ -181,6 +190,7 @@
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:text="읽는 중"
+                android:textColor="#333333"
                 android:textStyle="bold"/>
 
             <androidx.appcompat.widget.SwitchCompat
@@ -194,6 +204,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="한 줄 독후감"
+            android:textColor="#333333"
             android:layout_marginTop="30dp"
             android:textStyle="bold" />
 
@@ -204,6 +215,7 @@
             android:layout_marginTop="10dp"
             android:gravity="top"
             android:hint="내용을 입력해주세요."
+            android:textColor="#333333"
             android:background="@android:drawable/editbox_background"
             android:padding="10dp" />
 
