--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -25,6 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="이메일"
+        android:textColor="#333333"
         android:textStyle="bold"
         android:layout_marginTop="30dp"/>
 
@@ -33,6 +34,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:hint="이메일을 입력해 주세요."
+        android:textColor="#333333"
         android:background="@android:color/transparent" />
 
     <View
@@ -44,6 +46,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="비밀번호"
+        android:textColor="#333333"
         android:textStyle="bold"
         android:layout_marginTop="20dp"/>
 
@@ -52,6 +55,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:hint="비밀번호를 입력해 주세요."
+        android:textColor="#333333"
         android:inputType="textPassword"
         android:background="@android:color/transparent" />
 
@@ -66,6 +70,7 @@
         android:layout_height="55dp"
         android:layout_marginTop="40dp"
         android:backgroundTint="#6378EF"
+        android:textColor="#FFFFFF"
         android:text="로그인" />
 
     <LinearLayout
