--- a/app/src/main/res/layout/item_starred_sentence.xml
+++ b/app/src/main/res/layout/item_starred_sentence.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="140dp"
         android:orientation="horizontal"
+        android:backgroundTint="@color/white"
         android:padding="12dp">
 
         <ImageView
@@ -26,6 +27,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:backgroundTint="@color/white"
             android:layout_marginStart="16dp">
 
             <TextView
