전체적인 코드 90퍼센트 완료

--- a/app/src/main/res/layout/activity_add_book.xml
+++ b/app/src/main/res/layout/activity_add_book.xml
@@ -152,6 +152,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@null"
+                android:textColor="#333333"
                 android:hint="20XX.XX.XX" />
 
         </LinearLayout>
