--- a/app/src/main/res/layout/item_sentence_card.xml
+++ b/app/src/main/res/layout/item_sentence_card.xml
@@ -5,6 +5,7 @@
     android:layout_height="200dp"
     android:layout_margin="10dp"
     app:cardCornerRadius="12dp"
+    app:cardBackgroundColor="#FFFFFF"
     app:cardElevation="4dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
